<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fffff3"
    android:layout_height="match_parent"
    tools:context=".java_Q10">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/javaqq10"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btclipbord"
                android:layout_width="54dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="-20dp"
                app:icon="@drawable/copy"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/t7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:lineSpacingExtra="10sp"
                android:text="@string/java_qq10"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000000"
                android:textSize="16sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/ot"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="177dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/ot_i"
                app:srcCompat="@drawable/javaq10" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>