<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fffff3"
    android:layout_height="match_parent"
    tools:context=".use_Q2">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/check_temp"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="221dp"
        android:layout_height="60dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/temp"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ettemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/ettemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/akaya_telivigala"
        android:hint="@string/enter_here"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textColorHint="#736F6F"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.378" />

    <TextView
        android:id="@+id/tvresult"
        android:layout_width="294dp"
        android:layout_height="81dp"
        android:fontFamily="@font/akaya_telivigala"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ettemp"
        app:layout_constraintVertical_bias="0.637" />

    <Button
        android:id="@+id/btcheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        app:layout_constraintBottom_toTopOf="@+id/tvresult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ettemp" />
</androidx.constraintlayout.widget.ConstraintLayout>