<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fffff3"
    android:layout_height="match_parent"
    tools:context=".use_Q3">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="350dp"
        android:layout_height="76dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/javaqq3"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintVertical_bias="0.248">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="105dp"
                android:layout_height="41dp"
                android:layout_margin="10dp"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/num1"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/akaya_telivigala"
                android:hint="@string/enter_here"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/primary"
                android:textColorHighlight="#000000"
                android:textColorHint="#555454"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="127dp"
                android:layout_height="41dp"
                android:layout_margin="10dp"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/num2"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_here"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/primary"
                android:textColorHighlight="#000000"
                android:textColorHint="#555454"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btcheck"
        android:layout_width="105dp"
        android:layout_height="61dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/check"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>