<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Q1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/primary"
                android:fontFamily="@font/alike"
                android:padding="30dp"
                android:text="@string/javaqq1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btclipbord"
                android:layout_width="54dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="-10dp"
                android:background="@drawable/shapes"
                app:icon="@drawable/copy"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/t7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/alike"
                android:lineSpacingExtra="10sp"
                android:text="@string/java_qq1"
                android:textAlignment="viewStart"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/primary" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/ot"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="152dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/ot_i"
                app:srcCompat="@drawable/javaq1" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>