<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffff3"
    tools:context=".use_Q8">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="360dp"
        android:layout_height="61dp"
        android:layout_margin="20dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/water_bill"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lr"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/lastR"
        app:layout_constraintEnd_toStartOf="@+id/lastR"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lastR" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cr"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/currentR"
        app:layout_constraintEnd_toStartOf="@+id/currentR"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/currentR" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nod"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/numofday"
        app:layout_constraintEnd_toStartOf="@+id/numofday"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numofday" />

    <EditText
        android:id="@+id/lastR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/lr"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/currentR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/currentR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cr"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/numofday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.74"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/numofday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nod"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.447"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numofday" />

</androidx.constraintlayout.widget.ConstraintLayout>